--- a/index021.html
+++ b/index021.html
@@ -9,16 +9,66 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="">Home</a></li>
-            <li class="block-list"><a href="">Shorts</a>
-
-
-            </li>
-            <li><a href="">Social</a></li>
-        </ul>
-    </nav>
+    <ul class="menu">
+        <li>
+            <a href="#">Main Menu</a>
+            <ul class="menu-items">
+                <li>
+                    <a href="#">Menu Item Header</a>
+                    <ul>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Menu Item Header</a>
+                    <ul>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Menu Item Header</a>
+                    <ul>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Menu Item Header</a>
+                    <ul>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Menu Item Header</a>
+                    <ul>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                        <li>Sub menu item</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+    </ul>
 </body>
 
 </html>
